# sharedstate

./: Cargo.toml  LICENSE.txt  code-review.html  plan.txt  rewrite-plan.html
examples/: kv_node.rs  kv_tui.rs  kv_web.rs
examples/kv-web/: README.md  index.html  package-lock.json  package.json
examples/kv-web/src/: App.tsx  api.ts  styles.css  types.ts
examples/kv-web/src/components/: AddNodeModal.tsx  ClusterGraph.tsx  TopHeader.tsx
examples/webtester/: Cargo.toml
examples/webtester/src/: api.rs  main.rs  network.rs  node.rs  state.rs  ui.rs
examples/webtester/static/: app.js  index.html  style.css
examples_old/: kv_node.rs  kv_web.rs
examples_old/kv-web/: package-lock.json
src/: io.rs  lib.rs  message_io.rs  recoverable_state.rs  state.rs  test_orchestrator.rs  utils.rs
src/cluster/: action_pump.rs  client.rs  control.rs  diagnostics.rs  follower.rs  inner.rs  leader.rs  leadership.rs  messages.rs  mod.rs  node.rs  observer.rs  observer_peer_state.rs  peer.rs  peer_handler.rs  peers.rs  pump.rs  tests.rs
src/cluster/election/: algorithm.rs  client_policy.rs  follow_policy.rs  mod.rs  paths.rs  timing.rs
src/cluster/node/: test.rs
src/cluster/tests/: fuzzy.rs
src/handshake/: client.rs  handshake.rs  messages.rs  mod.rs  server.rs
src/net/: io.rs  message_channel.rs  message_channels.rs  message_io.rs  messages.rs  mod.rs  simulated.rs  sync_io.rs
src/new/: election.rs  mod.rs  node_state.rs  subscribable_state.rs
src/new/tasks/: current_leader.rs  mod.rs  peer_connections.rs  peer_discovery.rs  rpc_server.rs
src/protocol/: framing.rs  messages.rs  mod.rs
src/res/: leader-return.json  leader-return2.json  new-leader-indirect.json
src/shared/: authorative_state.rs  messages.rs  mod.rs  node.rs
src/shared/node/: client_policy.rs  election.rs  follow_policy.rs  paths.rs  test.rs  timing.rs
src/state/: determinstic_state.rs  hot_reader.rs  mod.rs  recoverable.rs  recoverable_state.rs  shared_state.rs
src/test_orchestrator/: test.rs
src/testing/: fuzzy_test.rs  handshake_tests.rs  message_io_tests.rs  mod.rs  node.rs  scenarios.rs  state_tests.rs  test.rs  test_sync_io.rs
src/testing/node/: fuzzy.rs
src/transport/: channels.rs  mod.rs  simulated.rs  traits.rs
src/worker/: follow_worker.rs  handle_clients_worker.rs  lead_worker.rs  message_relay.rs  mod.rs  state_manager.rs  state_updater.rs  sync_manager.rs  sync_state.rs  sync_state_old.rs  sync_updater.rs  task_and_cancel.rs  update_worker_loop.rs
(+7 files in other folders)
