[package]
name = "sharedstate"
version = "0.4.3"
edition = "2021"
authors = ["Patrick Lorio <patrick@methods.dev>"]
description = "Sync heavily read state across many servers"
repository = "https://github.com/Developed-Methods/sharedstate"
license-file = "LICENSE.txt"

[dependencies]
message-encoding = "0.2.4"
sequenced-broadcast = "0.2.4"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.12"
futures-util = "0.3.31"
tracing = "0.1.40"
slab = "0.4.9"
rand_chacha = "0.3.1"
parking_lot = "0.12.3"
arc-metrics = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3.18"
assert_matches = "1.5.0"

