[package]
name = "webtester"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sharedstate = { path = "../.." }
axum = "0.8"
message-encoding = "0.2.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
